<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">樂活新中年</string>
    <string name="web_url">https://www.happy-retired.com</string>
    <string name="action_settings">設定</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
	<string name="share">分享</string>
    <!-- Activity Menu -->

    <string name="activity_page_started">進行中</string>
    <string name="activity_page_notstarted">即將開始</string>
    <string name="activity_page_tour">旅遊</string>
    <string name="activity_page_talk">演講/展覽</string>
    <string name="activity_page_opera">音樂/舞蹈/戲曲</string>

    
    <string name="volunteer_page_once">一次性</string>
    <string name="volunteer_page_regular">持續性</string>
    
    <string name="please_wait">請稍候</string>
     <string name="loading">載入中...</string>
     
     <string name="activityContentTitle">活動內容</string>
     <string name="activityContentTitle2">查詢方法</string>
     
     <string name="forum_all">最新</string>
     <string name="forumCategory">類別</string>
     <string name="forum_last_poste_name">最後回覆</string>
     
      <string name="vacancy">人數</string>
     
     <string name="volunteerContentTitle1">服務詳情</string>
     <string name="volunteerContentTitle2">職責</string>
     <string name="volunteerContentTitle3">參加辦法</string>
     
     <string name="blogContentTitle1">名人專欄</string>
     <string name="blogContentTitle2">網絡作家</string>
     <string name="blogContentTitle3">最新文章</string>

     <string name="action_share">分享</string>
     <string name="activity">參加活動</string>
     <string name="forum">退休論壇</string>
     <string name="volunteer">義工招募</string>
     <string name="blog">名人專欄</string>
     <string name="job">再就業</string>
     <string name="jetso">著數情報</string>
     <string name="membership">會員管理</string>
     
     <string name="activity_url">網址</string>
     <string name="fee">費用</string>
     <string name="activity_category">類別 </string>
     <string name="activity_time">時間 </string>
     <string name="activity_location">活動地區 </string>
     <string name="activity_address">活動地點</string>
     <string name="activity_effective_to">截止日期</string>
     <string name="free">免費</string>
     
     <string name="volunteer_targetgroup">對象</string>
     
     <string name="happyretired_app">樂活新中年  Android App</string>
     <string name="happyretired_app_url">https://play.google.com/store/apps/details?id=info.happyretired</string>
     
     
      <string-array name="profile_items">
        <item>個人資料</item>
        <!-- item>已回覆的話題</item-->
        <item>會員卡</item>
        <item>登出</item>
    </string-array>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>會員登入</item>
        <item>推薦內容</item>
        <item>退休論壇</item>
        <item>名人專欄</item>
        <item>參加活動</item>
        <item>義工招募</item>
        <item>再就業</item>
        <item>會員著數情報</item>
        <item>樂活商店</item>
        <item>Facebook</item>
        <item>聯絡我們</item>
        
        
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Web Service -->
    <string name="WEBSERVICE_JOB">https://www.happy-retired.com/jobwebservice</string>
    <string name="WEBSERVICE_ACTIVITY">https://www.happy-retired.com/activitywebservice</string>
    <string name="WEBSERVICE_VOLUNTEER">https://www.happy-retired.com/volunteerwebservice</string>
    <string name="WEBSERVICE_FORUM">https://www.happy-retired.com/forumwebservice</string>
    <string name="WEBSERVICE_BLOG">https://www.happy-retired.com/blogwebservice</string>
    <string name="WEBSERVICE_COMMON">https://www.happy-retired.com/commonwebservice</string>
    <string name="WEBSERVICE_JETSO">https://www.happy-retired.com/jetsowebservice</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_for_details">ActivityForDetails</string>

    
    <!-- License checking status messages -->
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>

    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="unlicensed_dialog_retry_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="buy_button">Buy app</string>
    <string name="retry_button">Retry</string>
    <string name="quit_button">Exit</string>
    
    
    <string name="country_prompt">所住地區</string>
 
    <string-array name="country_arrays">
        	<item>請選擇居住地區</item>	
        	<item>中西區</item>
			<item>灣仔區</item>
			<item>東區</item>
			<item>南區</item>
			<item>油尖旺區</item>
			<item>深水埗區</item>
			<item>九龍城區</item>
			<item>黃大仙區</item>
			<item>觀塘區</item>
			<item>葵青區</item>
			<item>荃灣區</item>
			<item>屯門區</item>
			<item>元朗區</item>
			<item>北區</item>
			<item>大埔區</item>
			<item>沙田區</item>
			<item>西貢區</item>
			<item>離島區</item>
    </string-array>
    
    <string name="register_link">我同意受<a href="https://www.happy-retired.com/index.php/terms/">使用條款</a>及<a href="https://www.happy-retired.com/index.php/privacy">私隱政策聲明</a>所約束。</string>
    
    <string name="age_prompt">所住年齡</string>
 
    <string-array name="age_arrays">
        	<item>請選擇年齡</item>	
        	<item>40 或以下</item>
        	<item>41 - 45</item>
			<item>46 - 50</item>
			<item>51 - 55</item>
			<item>56 - 60</item>
			<item>61 - 65</item>
			<item>66 - 70</item>
			<item>71 或以上</item>
    </string-array>
    
    
     <style name="DefaultButtonText">
       <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
</resources>
