<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8">    

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="4dip"
    android:layout_marginRight="4dip"
    android:layout_marginBottom="48dip"
   >

    
    <LinearLayout
        android:padding="12dip"
	        android:id="@+id/first"
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
         	android:background="@drawable/container_dropshadow">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:layout_marginTop="8dip"
        
        android:textSize="26dp" />

    <TextView
       android:id="@+id/companyName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text=""
       android:textColor="#000"
       android:layout_marginBottom="8dip"
       android:textSize="16dp" />
    	
 		
	    
    <my.view.DynamicImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_gravity="center"
        android:layout_marginBottom="8dip"
        android:adjustViewBounds="true"/>

	<TextView
        android:id="@+id/contentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:text="@string/volunteerContentTitle1"
      
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:textSize="22dp" />
		
    <TextView
        android:id="@+id/content"
        android:layout_below="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:lineSpacingExtra="10dp"
        android:textSize="22dp" />
    
    <TextView
        android:id="@+id/contentTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:text="@string/volunteerContentTitle2"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="8dip"
        android:textSize="22dp" />
    
    <TextView
        android:id="@+id/content2"
        android:layout_below="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:lineSpacingExtra="10dp"
        android:textSize="22dp" />
    
     <TextView
        android:id="@+id/contentTitle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:text="@string/volunteerContentTitle3"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="8dip"
        android:textSize="22dp" />
    
    <TextView
        android:id="@+id/content3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:textSize="20dp" />
     </LinearLayout>
     
    <LinearLayout
	        android:id="@+id/linlaHeaderProgress2"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:orientation="vertical"
	         android:visibility="gone">
	
	        <ProgressBar
	            android:id="@+id/pbHeaderProgress"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
				android:layout_centerInParent="true">
	        </ProgressBar>
	        <TextView
		        android:id="@+id/txtLabel"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="center"
		        android:textSize="16dp"
		        android:text="@string/loading"/>
	    </LinearLayout>
	    
    <RelativeLayout
       android:padding="12dip"
         android:id="@+id/second"
         android:background="@drawable/container_dropshadow"
            android:orientation="vertical"
	        android:layout_marginTop="4dip"
	        
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
   <ImageView
	             android:id="@+id/TextView01"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="4dp"
	             android:src="@drawable/ic_action_time" />

   <TextView
       android:id="@+id/TextView02"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:text=""
       android:textColor="#000"
        android:layout_marginLeft="50dp"
       android:layout_alignTop="@+id/TextView01"
       android:textSize="18dp" />

             	<TextView
             	    android:id="@+id/TextView03"
             	    android:layout_width="wrap_content"
             	    android:layout_height="wrap_content"
             	    android:text=""
             	    android:textColor="#000"
             	    android:layout_below="@+id/TextView02"
             	     android:layout_marginLeft="50dp"
             	    android:textSize="16dp" />
          
        <ImageView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:layout_below="@+id/TextView03"
       		android:layout_alignLeft="@+id/TextView01"
            android:src="@drawable/ic_action_place" />
	
	             <TextView
	                 android:id="@+id/TextView05"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text=""
	                 android:textColor="#000"
	                  
       				android:layout_alignTop="@+id/TextView04"
       				 android:layout_marginLeft="50dp"
	                 android:textSize="18dp" />

             	<TextView
             	    android:id="@+id/TextView06"
             	    android:layout_width="wrap_content"
             	    android:layout_height="wrap_content"
             	       android:layout_below="@+id/TextView05"
       				
             	    android:text=""
             	    android:textColor="#000"
             	     android:layout_marginLeft="50dp"
             	    android:textSize="18dp" />
             	
             	 <ImageView
            android:id="@+id/icon_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:layout_below="@+id/TextView06"
       		android:layout_alignLeft="@+id/TextView01"
            android:src="@drawable/ic_action_call" />
	
	             <TextView
	                 android:id="@+id/contact_no"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:text=""
	                 android:textColor="#000"
	                   
       				android:layout_alignTop="@+id/icon_call"
       				 android:layout_marginLeft="50dp"
	                 android:textSize="18dp" />

	             <Button
	                 android:id="@+id/buttonCall"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
	                 android:layout_alignTop="@+id/contact_no"
	                 android:text="撥打"
	                 android:textSize="12dp" />
     </RelativeLayout>        	
    
        
    <RelativeLayout
       android:padding="12dip"
         android:id="@+id/second"
         android:background="@drawable/container_dropshadow"
            android:orientation="vertical"
	        android:layout_marginTop="4dip"
	        android:layout_marginBottom="4dip"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">

             
             	<TextView
             		android:id="@+id/TextView07" 
             		android:layout_width="wrap_content" 
             		android:layout_height="wrap_content"
             		android:textSize="18dp" 
             		android:text="@string/volunteer_targetgroup"  
               		android:textColor="#000"/>
             	<TextView
             	    android:layout_alignTop="@+id/TextView07"
             	    android:layout_marginLeft="50dp"
             		android:id="@+id/TextView08"
             		android:layout_width="wrap_content" 
             		android:layout_height="wrap_content"
             		android:textSize="18dp" android:text=""      		
             		android:textColor="#000"/>
        		
             	<TextView
             	    android:layout_marginTop="10dp"
             	    android:layout_below="@+id/TextView07"
             	    android:layout_alignLeft="@+id/TextView07"
             		android:id="@+id/TextView09" 
             		android:layout_width="wrap_content" 
             		android:layout_height="wrap_content"
             		android:textSize="18dp" 
             		android:text="@string/vacancy"  
               		android:textColor="#000"/>
             	<TextView
             	       android:layout_below="@+id/TextView07"
             	    
             	    android:layout_alignTop="@+id/TextView09"
             	    android:layout_marginLeft="50dp"
             		android:id="@+id/TextView10"
             		android:layout_width="wrap_content" 
             		android:layout_height="wrap_content"
             		android:textSize="18dp" android:text=""      		
             		android:textColor="#000"/>
             	
             	<TextView
             	    android:layout_marginTop="10dp"
             	    android:layout_below="@+id/TextView09"
		             android:id="@+id/TextView11"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:autoLink="web"
		             android:linksClickable="true"
		             android:text="http://happy-retired.com"
		             android:textColor="#000"
		             android:layout_weight="2" 
		             android:textSize="18dp" />
             
    </RelativeLayout>
    
</LinearLayout>
</ScrollView>

	<RelativeLayout
	            android:orientation="vertical"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
             	
      <my.view.DynamicImageView
          android:layout_alignParentBottom="true"
        android:id="@+id/advertistment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"/> 
    </RelativeLayout>
    
</RelativeLayout>
